Fix images shift in the paragraph. Redirect after deleting entries.

--- a/web/assets/base_auth.css
+++ b/web/assets/base_auth.css
@@ -72,6 +72,10 @@ div.post-add-icon:hover {
     margin: 1em 0;
 }
 
+.post-content p > img:first-child {
+    margin-left: -1em;
+}
+
 .post-content ul {
     list-style-type: disc;
     list-style-position: inside;
